버전 수정 : 1.0.0-dev.1

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coolsms-sdk",
-  "version": "1.0.0",
+  "version": "1.0.0-dev.1",
   "description": "COOLSMS SDK for Javascript",
   "main": "index.js",
   "scripts": {
