--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   },
   "homepage": "https://github.com/coolsms/coolsms-sdk-js#readme",
   "dependencies": {
-    "request": "^2.81.0"
+    "crypto-js": "^3.1.9-1",
+    "moment-timezone": "^0.5.11",
+    "request": "^2.81.0",
+    "uniqid": "^4.1.1"
   }
 }
