--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coolsms-sdk",
-  "version": "1.0.0-dev.1",
-  "description": "COOLSMS SDK for Javascript",
+  "version": "1.0.0-beta.1",
+  "description": "COOLSMS SDK for node.js",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
