--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "COOLSMS SDK for node.js",
   "main": "index.js",
   "scripts": {
+    "docs:build": "./node_modules/jsdoc-to-markdown/bin/cli.js --files ./index.js ./**.js > docs/index.md --partial tooling/header.hbs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,5 +28,8 @@
     "moment-timezone": "^0.5.11",
     "request": "^2.81.0",
     "uniqid": "^4.1.1"
+  },
+  "devDependencies": {
+    "jsdoc-to-markdown": "^3.0.0"
   }
 }
